--- a/codegen-cli/src/main/resources/kotlin-codegen/app-module/src/main/kotlin/domain/entity.mustache
+++ b/codegen-cli/src/main/resources/kotlin-codegen/app-module/src/main/kotlin/domain/entity.mustache
@@ -10,7 +10,7 @@ import org.hibernate.annotations.LazyCollectionOption
 {{#models}}
 {{#model}}
 {{#isEnum}}
-{{>enumOuterClass}}
+{{>app-module/src/main/kotlin/domain/enum}}
 {{/isEnum}}
 {{^isEnum}}
 {{>app-module/src/main/kotlin/domain/pojoentity.kt}}
