--- a/codegen-cli/src/main/resources/kotlin-codegen/app-module/src/main/kotlin/domain/pojoentity.kt.mustache
+++ b/codegen-cli/src/main/resources/kotlin-codegen/app-module/src/main/kotlin/domain/pojoentity.kt.mustache
@@ -23,7 +23,7 @@ data class {{classname}}(
 {{#vars}}
 	{{#isEnum}}
 	{{^isContainer}}
-	{{>enumClass}}
+<!-- {{>enumClass}} -->
 	{{/isContainer}}
 	{{#isContainer}}
 	{{#mostInnerItems}}
@@ -110,6 +110,9 @@ data class {{classname}}(
 	{{#vendorExtensions.isEnumValue}}
 	@EnumValue(enumGroup = "{{vendorExtensions.enumGroupName}}"{{^required}}, optional = true{{/required}})
 	{{/vendorExtensions.isEnumValue}}
+	{{#vendorExtensions.isEnumClass}}
+	@Enumerated(EnumType.STRING)
+	{{/vendorExtensions.isEnumClass}}
 	{{#isContainer}}
 	var {{name}}: {{{datatypeWithEnum}}}{{#hasMore}},{{/hasMore}}
 	{{/isContainer}}
