--- a/codegen-cli/src/main/resources/kotlin-codegen/common/src/main/kotlin/domain/commonEntity.mustache
+++ b/codegen-cli/src/main/resources/kotlin-codegen/common/src/main/kotlin/domain/commonEntity.mustache
@@ -9,7 +9,7 @@ import org.hibernate.annotations.LazyCollectionOption
 {{#models}}
 {{#model}}
 {{#isEnum}}
-{{>enumOuterClass}}
+{{>app-module/src/main/kotlin/domain/enum}}
 {{/isEnum}}
 {{^isEnum}}
 {{>common/src/main/kotlin/domain/commonPojoentity.kt}}
